k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: streaming-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin

  template:
    metadata:
      labels:
        app: admin

    spec:
      containers:
        - name: admin
          image: 457660516966.dkr.ecr.us-east-1.amazonaws.com/streamingapp-admin:1.0.11

          ports:
            - containerPort: 3003

          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 15

          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: streaming-app

spec:
  selector:
    app: admin

  ports:
    - port: 3003
      targetPort: 3003

  type: ClusterIP
