k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: streaming-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
      - name: auth
        image: 457660516966.dkr.ecr.us-east-1.amazonaws.com/streamingapp-auth:1.0.12

        ports:
        - containerPort: 3001

        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: streaming-app

spec:
  selector:
    app: auth

  ports:
  - port: 3001
    targetPort: 3001

  type: ClusterIP
