k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: streaming-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: 457660516966.dkr.ecr.us-east-1.amazonaws.com/streamingapp-chat:1.0.11
          ports:
            - containerPort: 3004

          livenessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 30
            periodSeconds: 15

          readinessProbe:
            tcpSocket:
              port: 3004
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: streaming-app

spec:
  selector:
    app: chat

  ports:
    - port: 3004
      targetPort: 3004

  type: ClusterIP
