k8s/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: streaming-app
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: streaming-app
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: gp2

        resources:
          requests:
            storage: 8Gi
