k8s/streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-service
  namespace: streaming-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: streaming

  template:
    metadata:
      labels:
        app: streaming

    spec:
      containers:
      - name: streaming
        image: 457660516966.dkr.ecr.us-east-1.amazonaws.com/streamingapp-streaming:1.0.11

        ports:
        - containerPort: 3002

        readinessProbe:
          httpGet:
            path: /api/health/
            port: 3002
          initialDelaySeconds: 15
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /api/health/
            port: 3002
          initialDelaySeconds: 30
          periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: streaming-service
  namespace: streaming-app

spec:
  selector:
    app: streaming

  ports:
  - port: 3002
    targetPort: 3002

  type: ClusterIP
